fix: fixing overlapping button

--- a/style.css
+++ b/style.css
@@ -216,4 +216,11 @@ h1 {
     width: 80%;
     height: 40vh;
   }
+
+  #back-button {
+    top: 0.5rem;
+    left: 0.5rem;
+    font-size: 0.8rem;
+    padding: 6px 12px;
+  }
 }
